@@ -1,0 +1,7 @@
+film.width = 800
+film.height = 800
+scene.file = scenes/islandaov/hair.scn
+# Film image pipeline plug-ins
+film.imagepipeline.0.type = TONEMAP_LINEAR
+film.imagepipeline.1.type = GAMMA_CORRECTION
+film.imagepipeline.1.value = 2.2
